- create db - adding movies.json - adding flicker access key

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+flicker_access_key=1a16930a3fe92d19c7a9b4b3b3931b82
