--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,8 +87,20 @@ dependencies {
     implementation "com.google.android.material:material:$materialVersion"
     //endregion
 
+    //region retrofit && okhttp
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpLoggingVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    //endregion
 
+    //region paging
+    implementation "androidx.paging:paging-runtime:$pagingVersion"
 
+    //endregion
+
+    //region Glide
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    //endregion 
 }
 
 def getFlickrAccess() {
