--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
 
     // region room
     kapt "androidx.room:room-compiler:$roomVersion"
+    kapt "android.arch.persistence.room:compiler:$roomVersion"
     implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
     //endregion
@@ -100,7 +101,15 @@ dependencies {
 
     //region Glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
-    //endregion 
+    //endregion
+
+    //region SwipeRefresh
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipeRefershLayoutVersion"
+    //endregion
+
+    //regin sectioned recycleView
+    implementation 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:3.2.0'
+    //endregion
 }
 
 def getFlickrAccess() {
