--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ buildscript {
         truthVersion = '0.42'
         testExtJunit = '1.1.0'
         uiAutomatorVersion = '2.2.0'
-        viewPagerVersion = '1.0.0'
+        swipeRefershLayoutVersion="1.1.0"
         workVersion = '2.4.0'
     }
 
