--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,4 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 flicker_access_key=1a16930a3fe92d19c7a9b4b3b3931b82
-is_in_memory_repo=true
+is_in_memory_repo=false
